fix: fix gap between title and info list of block

--- a/pages/block/styles.module.scss
+++ b/pages/block/styles.module.scss
@@ -4,6 +4,9 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    @media screen and (max-width: 900px) {
+      margin-bottom: 0.5rem;
+    }
   }
   .blockHash {
     word-break: break-all;
